    DateTimeZone::getTranstions() to limit the range of transitions being
    returned.
  . support for "first/last day of <month>" style texts.
  . support for date/time strings returned by MS SQL.
  . support for serialization and unserialization of DateTime objects.
  . support for diffing date/times through date_diff() / DateTime::diff().
  . added DateInterval class to represent the difference between two date/times.
  . support for parsing ISO intervals for use with DateInterval.
  . date_add() / DateTime::add(), date_sub() / DateTime::sub() for applying an
    interval to an existing date/time.
  . proper support for "this week", "previous week"/"last week" and "next week"
    phrases so that they actually mean the week and not a seven day period
    around the current day.
  . added the DatePeriod class, that supports iterating over a DateTime object
    applying a DateInterval on each iteration.

- Added functionality to SPL extension:
  . Added SPL to list of standard extensions that cannot be disabled. (Marcus)
  . Added ability to store associative information with objects in
    SplObjectStorage. (Marcus)
  . Added ArrayAccess support to SplObjectStorage. (Marcus)
  . Added SplDoublyLinkedList, SplStack, SplQueue classes. (Etienne)
  . Added FilesystemIterator. (Marcus)
  . Added GlobIterator. (Marcus)
  . Added SplHeap, SplMinHeap, SplMaxHeap, SplPriorityQueue classes. (Etienne)
- Added ReflectionProperty::setAccessible() method that allows non-public
  property's values to be read through ::getValue(). (Derick)
- Added ability to use Traversable objects instead of plain arrays in ext/soap.
  (Joshua Reese, Dmitry)
- Added msg_queue_exists() function. (Benjamin Schulz)
- Added 3 Firebird specific attributes that can be set via PDO::setAttribute()
  to control formatting of date/timestamp columns: PDO::FB_ATTR_DATE_FORMAT,
  PDO::FB_ATTR_TIME_FORMAT and PDO::FB_ATTR_TIMESTAMP_FORMAT. (Lars W)
- Added gmp_testbit() function from HEAD. (Stas)